tests/NormalTests/paczka1/fuzzy1/27887133.err
Error in line 18: lD2 A328 36,2
Error in line 27: lD2 S321 34,4
Error in line 29: TqxeTsy S321 8L,7
Error in line 25: l547BWQ1 A281 67,8
